{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 281,
  "lineage": "66c2d46c-6658-0263-3df9-7e1a2166fbf7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "grpc_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "61616"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-28T04:55:29.265-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/schirmer-project/global/firewalls/grpc-app-firewall",
            "log_config": [],
            "name": "grpc-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/networks/psf-network",
            "priority": 1000,
            "project": "schirmer-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/firewalls/grpc-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-28T04:55:29.183-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/schirmer-project/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/networks/psf-network",
            "priority": 1000,
            "project": "schirmer-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "broker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20230814",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/schirmer-project/zones/europe-west3-a/disks/psf-broker-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/schirmer-project/zones/europe-west3-a/instances/psf-broker-vm",
            "instance_id": "4303024614822458792",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "debian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIIuUIXbnIj5nPc2oNu+aQtOY+CWedpIK+RDqTOGoWVDF minghewang102b@gmail.com\n"
            },
            "metadata_fingerprint": "HtypKfBM3cI=",
            "name": "psf-broker-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.71.216",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/networks/psf-network",
                "network_ip": "10.1.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/schirmer-project/regions/europe-west3/subnetworks/psf-broker-subnetwork",
                "subnetwork_project": "schirmer-project"
              }
            ],
            "project": "schirmer-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/schirmer-project/zones/europe-west3-a/instances/psf-broker-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app",
              "ssh"
            ],
            "tags_fingerprint": "ie3syIw_SLM=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.broker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "publisher",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20230814",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/schirmer-project/zones/europe-southwest1-b/disks/psf-publisher-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/schirmer-project/zones/europe-southwest1-b/instances/psf-publisher-vm",
            "instance_id": "1024163082596857255",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "debian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIIuUIXbnIj5nPc2oNu+aQtOY+CWedpIK+RDqTOGoWVDF minghewang102b@gmail.com\n"
            },
            "metadata_fingerprint": "HtypKfBM3cI=",
            "name": "psf-publisher-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.175.73.166",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/networks/psf-network",
                "network_ip": "10.2.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/schirmer-project/regions/europe-southwest1/subnetworks/psf-broker-subnetwork",
                "subnetwork_project": "schirmer-project"
              }
            ],
            "project": "schirmer-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/schirmer-project/zones/europe-southwest1-b/instances/psf-publisher-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-southwest1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.publisher"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "subscriber",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20230814",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/schirmer-project/zones/europe-west9-a/disks/psf-subscriber-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/schirmer-project/zones/europe-west9-a/instances/psf-subscriber-vm",
            "instance_id": "6291699974447117778",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "debian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIIuUIXbnIj5nPc2oNu+aQtOY+CWedpIK+RDqTOGoWVDF minghewang102b@gmail.com\n"
            },
            "metadata_fingerprint": "HtypKfBM3cI=",
            "name": "psf-subscriber-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.163.213.187",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/networks/psf-network",
                "network_ip": "10.3.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/schirmer-project/regions/europe-west9/subnetworks/psf-broker-subnetwork",
                "subnetwork_project": "schirmer-project"
              }
            ],
            "project": "schirmer-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/schirmer-project/zones/europe-west9-a/instances/psf-subscriber-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subscriber"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/schirmer-project/global/networks/psf-network",
            "mtu": 0,
            "name": "psf-network",
            "project": "schirmer-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/networks/psf-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "broker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-28T04:55:29.686-07:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/schirmer-project/regions/europe-west3/subnetworks/psf-broker-subnetwork",
            "ip_cidr_range": "10.1.2.0/24",
            "name": "psf-broker-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/networks/psf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "schirmer-project",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/schirmer-project/regions/europe-west3/subnetworks/psf-broker-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "publisher",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-28T04:55:30.087-07:00",
            "gateway_address": "10.2.2.1",
            "id": "projects/schirmer-project/regions/europe-southwest1/subnetworks/psf-broker-subnetwork",
            "ip_cidr_range": "10.2.2.0/24",
            "name": "psf-broker-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/networks/psf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "schirmer-project",
            "purpose": "PRIVATE",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/schirmer-project/regions/europe-southwest1/subnetworks/psf-broker-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subscriber",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-28T04:55:29.695-07:00",
            "gateway_address": "10.3.2.1",
            "id": "projects/schirmer-project/regions/europe-west9/subnetworks/psf-broker-subnetwork",
            "ip_cidr_range": "10.3.2.0/24",
            "name": "psf-broker-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/schirmer-project/global/networks/psf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "schirmer-project",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/schirmer-project/regions/europe-west9/subnetworks/psf-broker-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}